/*
 * $Id: ChangeLog,v 1.2473 2004/03/03 21:11:21 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-04 00:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/rtl/math.c
    ! Don't try to include nonexistent error.h on BSD.
  * source/rtl/gtcrs/gtcrs.h
    ! Fixed to compile on Darwin.
  * source/vm/errorapi.c
    ! Don't try to use hb_isService() on Darwin.
  * contrib/libct/files.c
    ! Fixed SETFDATI() on Darwin.

2004-03-04 04:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zip.c
    ! wild argument "?" is ignored. Fixed.

2004-03-04 03:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/file.c
    ! fix hb_fsIsdirectory() function whereby ffind is used after it closed.
      (Reported by Paul Tucker)

2004-03-04 02:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/hbffind.c
    * fix for HB_OS_WIN_32 when DIRECTORY("D:\*.*","V") -> pointer overflow.
      because in function GetOldesFile(), szFileName was passed instead of
      szPath while memory allocated only 7 bytes, just enough for "C:\*.*"

2004-03-03 16:35 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * include/hbset.h
  * include/set.ch
  * source/rtl/set.c
  * source/pptable.c
  * source/vm/hvm.c
  * tests/bkgtst2.prg
    ! Renamed SET_BGTASKPCODES to SET_BACKGROUNDTICK

2004-03-03 22:30 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * config/dos/global.cf
    ! Fixed GT library linking order.
  * contrib/libct/color.prg
    + Added INVERTATTR() function.
  * contrib/libct/ctmisc.prg
    + Added EXENAME() function.
  * contrib/libct/disk.c
    + Added NUMDISKL() function (only DJGPP version).
  * contrib/libct/files.c
    + Added FILESMAX() function (only DJGPP version).
    + Fixed SETFDATI() to work on DJGPP.
  * contrib/libct/print.c